# textual-shell

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
commands/: index.html
commands/bash/: index.html
commands/clear/: index.html
commands/help/: index.html
commands/jobs/: index.html
commands/python/: index.html
commands/set/: index.html
docs/: index.md
docs/commands/: bash.md  help.md  index.md  job.md  python.md
docs/examples/async_shell_app/: async_app.py
docs/examples/basic_shell_app/: basic_app.py  commands.py  shell_app.py  style.css  style.tcss
docs/examples/basic_shell_app.py/: shell_app.py
docs/guide/tutorial/: sleep.md
docs/reference/: index.md
docs/widgets/: index.md
guide/: index.html
guide/design/: index.html
guide/tutorial/: index.html
guide/tutorial/sleep/: index.html
guide/tutorial/timer/: index.html
reference/: index.html
reference/app/: index.html
reference/command/: index.html
reference/configure/: index.html
reference/job/: index.html
roadmap/: index.html
src/textual_shell/: app.py  command.py  configure.py  job.py  screen.py  widgets.py
src/textual_shell/commands/: __init__.py  bash.py  command.py  help.py  jobs.py  python.py  set.py
widgets/: index.html
widgets/command_list/: index.html
widgets/console_log/: index.html
widgets/job_manager/: index.html
widgets/prompt/: index.html
widgets/settings_display/: index.html
widgets/shell/: index.html
widgets/shell/shell/: index.html
widgets/shell_area/: index.html
widgets/suggestions/: index.html
(+17 files in other folders)
